--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,31 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Orbitron:wght@400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Press+Start+2P&family=Rubik+Iso&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* In your global CSS file */
+@layer utilities {
+  .clip-left {
+    clip-path: polygon(0 0, 100% 0, calc(100% - 70px) 100%, 0 100%);
+  }
+  .clip-right {
+    clip-path: polygon(0 100%, 100% 100%, calc(100% - 70px) 0, 0 0);
+  }
+  .gradient-text {
+    background: linear-gradient(to right, #7a40c3, #fff);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    color: transparent;
+  }
+}
+
+body {
+  @apply bg-[#030304];
+  font-family: "Montserrat";
+}
+
+.countdown {
+  font-family: "Press Start 2P" !important;
+}
