--- a/src/index.css
+++ b/src/index.css
@@ -6,26 +6,38 @@
 
 /* In your global CSS file */
 @layer utilities {
-  .clip-left {
-    clip-path: polygon(0 0, 100% 0, calc(100% - 70px) 100%, 0 100%);
-  }
-  .clip-right {
-    clip-path: polygon(0 100%, 100% 100%, calc(100% - 70px) 0, 0 0);
-  }
-  .gradient-text {
-    background: linear-gradient(to right, #7a40c3, #fff);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-clip: text;
-    color: transparent;
-  }
+	.clip-left {
+		clip-path: polygon(0 0, 100% 0, calc(100% - 70px) 100%, 0 100%);
+	}
+	.clip-right {
+		clip-path: polygon(0 100%, 100% 100%, calc(100% - 70px) 0, 0 0);
+	}
+	.gradient-text {
+		background: linear-gradient(to right, #7a40c3, #fff);
+		-webkit-background-clip: text;
+		-webkit-text-fill-color: transparent;
+		background-clip: text;
+		color: transparent;
+	}
 }
 
 body {
-  @apply bg-[#030304];
-  font-family: "Montserrat";
+	@apply bg-[#030304];
+	font-family: "Montserrat";
 }
 
 .countdown {
-  font-family: "Press Start 2P" !important;
+	font-family: "Press Start 2P" !important;
+}
+
+@layer utilities {
+	/* Hide scrollbar for Chrome, Safari and Opera */
+	.no-scrollbar::-webkit-scrollbar {
+		display: none;
+	}
+	/* Hide scrollbar for IE, Edge and Firefox */
+	.no-scrollbar {
+		-ms-overflow-style: none; /* IE and Edge */
+		scrollbar-width: none; /* Firefox */
+	}
 }
