--- a/src/components/card.css
+++ b/src/components/card.css
@@ -31,8 +31,12 @@
   font-size: 20px;
   font-family: 'Montserrat', sans-serif;
   color: #fff;
-  text-align: justify;
+  text-align: center;
   padding: 20px;
+  
+   
+  
+  
 }
 
 .title-container {
