--- a/src/components/Timeline.css
+++ b/src/components/Timeline.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Fira+Code:wght@700&family=Fira+Sans+Condensed:wght@900&family=Fira+Sans:wght@500&family=Playfair+Display+SC:wght@700&family=Racing+Sans+One&family=Saira+Stencil+One&display=swap');
 
+
+
+
+
 /* Add these styles to your Timeline.css file */
 .particles-container {
   position: absolute;
@@ -221,5 +225,29 @@
   }
   100% {
     transform: translateX(200%); /* Move completely off to the right */
+  }
+}
+
+
+.vertical-timeline-element-content {
+  visibility: hidden;
+}
+
+.vertical-timeline-element-content.bounce-in {
+  visibility: visible;
+  animation: cd-bounce-2 0.6s;
+}
+
+@keyframes cd-bounce-2 {
+  0% {
+    opacity: 0;
+    transform: translateX(-100px);
+  }
+  60% {
+    opacity: 1;
+    transform: translateX(20px);
+  }
+  100% {
+    transform: translateX(0);
   }
 }
